--- a/details.html
+++ b/details.html
@@ -38,20 +38,21 @@
           />Tierra Sagrada</a
         >
         <div class="d-flex">
-          <a href="/" class="me-4">
+          <a href="/" class="me-4 d-none d-md-block">
             <img src="./OI_files/oi-logo-w.png" class="me-2" />
           </a>
           <button
-            class="navbar-toggler"
+            class="d-block d-md-none navbar-toggler"
             type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#drawerMenu"
+            aria-controls="drawerMenu"
           >
-            <i class="navbar-toggler-icon"></i>
+            <i class="fas fa-bars text-white" style="transform: scaleX(2)"></i>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <div class="navbar-nav gap-2">
-              <a class="lnk nav-link active" href="#">About</a>
+          <div class="d-none d-md-flex flex-grow-1 align-items-center">
+            <div class="navbar-nav flex-row gap-2">
+              <a class="lnk nav-link" href="#">About</a>
               <a class="lnk nav-link" href="#">Contact</a>
               <a class="lnk nav-link" href="#">Logout</a>
               <a
@@ -87,6 +88,27 @@
               </ul>
             </div>
           </div>
+          <div
+            class="offcanvas offcanvas-end d-flex d-md-none"
+            tabindex="-1"
+            id="drawerMenu"
+            aria-labelledby="drawerMenuLabel"
+          >
+            <div class="offcanvas-header">
+              <a href="/" class="me-4">
+                <img src="./OI_files/oi-logo-w.png" class="me-2" />
+              </a>
+              <button
+                type="button"
+                class="btn text-white"
+                data-bs-dismiss="offcanvas"
+                aria-label="Close"
+              >
+                <i class="fas fa-times"></i>
+              </button>
+            </div>
+            <div class="offcanvas-body"></div>
+          </div>
         </div>
       </div>
     </nav>
@@ -105,13 +127,13 @@
         <p class="m-0"><i class="fas fa-share-alt"></i> Share</p>
       </div>
       <div class="row image-gallery">
-        <div class="col-md-6">
+        <div class="col col-md-6 col-sm-12">
           <img
             src="https://source.unsplash.com/collection/8890044/600x500"
             alt="image"
           />
         </div>
-        <div class="col-md-6">
+        <div class="col col-md-6 d-none d-md-block">
           <div class="row">
             <div class="col-md-6">
               <img
@@ -143,22 +165,146 @@
             </div>
           </div>
         </div>
+        <button class="d-flex align-items-center see-more">
+          <i class="fas fa-camera"></i>
+          <p class="m-0 ms-2">See all photos</p>
+        </button>
       </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="d-flex flex-column">
-          <h2 class="mt-5 mb-0">Noble room into the historical Torino</h2>
-          <div class="d-flex gap-2">
-            <p class="rating">★ 4.56</p>
-            <span>&middot;</span>
-            <p class="reviews">155 reviews</p>
-            <span>&middot;</span>
-            <p class="reviews">San Lucas Sacatepéquez</p>
+
+      <div class="row">
+        <div class="col col-12 col-md-6">
+          <p class="h5 mt-5">Pricing</p>
+          <div class="reservation">
+            <div class="d-flex align-items-center justify-content-between">
+              <p class="price m-0"><span class="currency">$30</span>/night</p>
+              <div class="d-flex align-items-center gap-2">
+                <p class="rating m-0">★ 4.56</p>
+                &middot;
+                <p class="reviews m-0">155 reviews</p>
+              </div>
+            </div>
+            <div class="d-flex flex-column mt-3">
+              <div class="d-flex align-items-center flex-wrap">
+                <div class="form-floating flex-grow-1">
+                  <input
+                    type="date"
+                    class="form-control"
+                    id="checkIn"
+                    placeholder="Check-In"
+                  />
+                  <label for="dateRange">Check-In</label>
+                </div>
+                <div class="form-floating flex-grow-1">
+                  <input
+                    type="date"
+                    class="form-control"
+                    id="checkOut"
+                    placeholder="Check-Out"
+                  />
+                  <label for="dateRange">Check-Out</label>
+                </div>
+              </div>
+              <div class="form-floating flex-grow-1">
+                <input
+                  class="form-control"
+                  id="guests"
+                  placeholder="Guests"
+                  value="1 guest"
+                />
+                <label for="guests">Guests</label>
+              </div>
+            </div>
+            <button class="btn btn-lg btn-success w-100 mt-3">Reserve</button>
+            <div class="pricing">
+              <p class="text-center caption mt-2">
+                You won't be charged yet. <a href="#">Learn more</a>
+              </p>
+              <div class="d-flex mt-3">
+                <p class="label flex-grow-1">$45 &times; 7 nights</p>
+                <p class="value">$318</p>
+              </div>
+              <div class="d-flex">
+                <p class="label flex-grow-1">Weekly stay discount</p>
+                <p class="value text-success">-$16</p>
+              </div>
+              <div class="d-flex">
+                <p class="label flex-grow-1">Cleaning fee</p>
+                <p class="value">$22</p>
+              </div>
+              <hr class="divider" />
+              <div class="d-flex">
+                <p class="label flex-grow-1"><strong>Total</strong></p>
+                <p class="value"><strong>$344</strong></p>
+              </div>
+            </div>
           </div>
         </div>
-        <p><i class="fas fa-share-alt"></i> Share</p>
+        <div class="col col-12 col-md-6">
+          <p class="h5 mt-5 ms-1">Meet your host</p>
+          <div class="owner-preview details-page">
+            <div class="details-card">
+              <img src="https://loremflickr.com/g/320/240/potrait,people/all" />
+              <p class="name"></p>
+              <p class="rank"></p>
+              <div class="d-flex justify-content-around w-100 stats">
+                <p class="reviews">
+                  <strong>150</strong>
+                  <small>Reviews</small>
+                </p>
+                <p class="rating">
+                  <strong>4.85</strong>
+                  <small>Rating</small>
+                </p>
+                <p class="duration">
+                  <strong>5</strong>
+                  <small>Years hosting</small>
+                </p>
+              </div>
+            </div>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+              voluptatum. Quisquam, voluptatum. Quisquam, voluptatum.
+            </p>
+            <button class="btn btn-dark">Contact</button>
+          </div>
+        </div>
       </div>
+      <p class="h5 mt-5 ms-1">Amenities</p>
+      <div class="d-flex flex-wrap align-items-center">
+        <div class="amenity">
+          <i class="fas fa-bed"></i>
+          <p class="m-0">1 king bed</p>
+        </div>
+        <div class="amenity">
+          <i class="fas fa-shower"></i>
+          <p class="m-0">Shared Bathroom</p>
+        </div>
+        <div class="amenity">
+          <i class="fas fa-home"></i>
+          <p class="m-0">Host's family lives here</p>
+        </div>
+        <div class="amenity more">
+          <p class="m-0">See More</p>
+        </div>
+      </div>
+      <p class="h5 mt-3">About this place</p>
+      <p class="description">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+        voluptatum. Quisquam, voluptatum. Quisquam, voluptatum. Quisquam,
+        voluptatum. Quisquam, voluptatum. Quisquam, voluptatum. Quisquam.
+      </p>
     </div>
     <footer>&copy; 2021 Tierra Sagrada</footer>
     <script src="./OI_files/jquery-3.6.0.min.js"></script>
+    <script
+      type="text/javascript"
+      defer=""
+      src="./OI_files/bootstrap.bundle.min.js"
+    ></script>
+    <script>
+      $(document).ready(function () {
+        $(".offcanvas-body").html($(".navbar-nav").html());
+      });
+    </script>
   </body>
 </html>
